LOG4J2-539: Fixed issue with "Reconfigure using XML below" function in JMX Client GUI. ConfigurationSource is now a top-level class and can be obtained with Configuration.getConfigurationSource(). LoggerContext.getConfiguration().getConfigurationSource() provides a reliable public method for obtaining a logger context's configuration location and content.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1603937 13f79535-47bb-0310-9956-ffa450edef68